--- a/public/assets/.env.sample
+++ b/public/assets/.env.sample
@@ -1,6 +1,6 @@
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
-JAWSDB_URL=
+DB_HOST="qn0cquuabmqczee2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com"
+DB_PORT="3306"
+DB_USERNAME="y8qkirv5pdmxr86d"
+DB_PASSWORD="op4rt2167xgt2djo"
+DB_NAME="w7vvbhpbhr5s6h4t"
+JAWSDB_URL="mysql://y8qkirv5pdmxr86d:op4rt2167xgt2djo@qn0cquuabmqczee2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/w7vvbhpbhr5s6h4t"	
